feat: unify database and add audit status
