# services/order-service/docs/swagger.json
@@ -41,7 +41,13 @@
                     },
                     {
                         "type": "string",
-                        "description": "Filter by status",
+                        "description": "Filter by order status",
+                        "name": "order_status",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by record status (active/deleted)",
                         "name": "status",
                         "in": "query"
                     },
@@ -325,8 +331,14 @@
                 "created_at": {
                     "type": "string"
                 },
+                "created_by": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
+                },
+                "order_status": {
+                    "$ref": "#/definitions/enterprise-microservice-system_services_order-service_internal_model.OrderStatus"
                 },
                 "product_id": {
                     "type": "string"
@@ -335,12 +347,15 @@
                     "type": "integer"
                 },
                 "status": {
-                    "$ref": "#/definitions/enterprise-microservice-system_services_order-service_internal_model.OrderStatus"
+                    "type": "string"
                 },
                 "total_price": {
                     "type": "number"
                 },
                 "updated_at": {
+                    "type": "string"
+                },
+                "updated_by": {
                     "type": "string"
                 },
                 "user_id": {
@@ -371,8 +386,14 @@
                 "created_at": {
                     "type": "string"
                 },
+                "created_by": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
+                },
+                "order_status": {
+                    "$ref": "#/definitions/enterprise-microservice-system_services_order-service_internal_model.OrderStatus"
                 },
                 "product_id": {
                     "type": "string"
@@ -381,12 +402,15 @@
                     "type": "integer"
                 },
                 "status": {
-                    "$ref": "#/definitions/enterprise-microservice-system_services_order-service_internal_model.OrderStatus"
+                    "type": "string"
                 },
                 "total_price": {
                     "type": "number"
                 },
                 "updated_at": {
+                    "type": "string"
+                },
+                "updated_by": {
                     "type": "string"
                 },
                 "user": {
@@ -400,7 +424,7 @@
         "enterprise-microservice-system_services_order-service_internal_model.UpdateOrderRequest": {
             "type": "object",
             "properties": {
-                "status": {
+                "order_status": {
                     "enum": [
                         "pending",
                         "confirmed",
@@ -419,9 +443,6 @@
         "enterprise-microservice-system_services_order-service_internal_model.User": {
             "type": "object",
             "properties": {
-                "active": {
-                    "type": "boolean"
-                },
                 "age": {
                     "type": "integer"
                 },
@@ -432,6 +453,9 @@
                     "type": "integer"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "status": {
                     "type": "string"
                 }
             }
